--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.7"
   },
@@ -51,6 +50,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.2"
   }
 }
